# geogrep

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
crates/geogrep/: Cargo.toml
crates/geogrep/src/: extract.rs  main.rs  matcher.rs  normalize.rs  output.rs  search.rs
crates/ggio/: Cargo.toml
crates/ggio/src/: lib.rs
homebrew/: README.md
homebrew/Formula/: geogrep.rb
