[workspace]
resolver = "2"
members = ["crates/geogrep"]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Fuzzy grep for geospatial vector data"
repository = "https://github.com/jesperfjellin/geogrep"
homepage = "https://github.com/jesperfjellin/geogrep"

[workspace.dependencies]
anyhow = "1"
gdal = "0.19"

[profile.release]
lto = "thin"
codegen-units = 1
