[package]
name = "geogrep"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "gg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
gdal.workspace = true
clap = { version = "4", features = ["derive"] }
fuzzy-matcher = "0.3"
deunicode = "1.6"
ignore = "0.4"
rayon = "1"
